--- a/styles2.css
+++ b/styles2.css
@@ -371,7 +371,9 @@ width: 13%;
 height: 250px;
 display: inline-block;
 margin: 0 15px;
-
+-webkit-box-shadow: 11px 11px 5px 0px rgba(48, 50, 52, 0.39);
+-moz-box-shadow:    11px 11px 5px 0px rgba(48, 50, 52, 0.39);
+box-shadow:         11px 11px 5px 0px rgba(48, 50, 52, 0.39);
 border-radius: 6px;
 overflow: hidden;
 }
